--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=/Users/Shu/Library/Application Support/NetBeans/8.0/build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\Shu\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
